# AgentDev

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  config.example.toml  impl-ui.md  impl.md  package.json  pnpm-lock.yaml  worktree-dashboard-design.md
.github/workflows/: ci.yml  publish.yml
apps/backend/: Cargo.toml
apps/backend/src/: api.rs  main.rs  websocket.rs
apps/frontend/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx  query-provider.tsx
apps/frontend/app/diff-viewer/: page.tsx
apps/frontend/app/sessions/: page.tsx
apps/frontend/app/worktrees/: page.tsx
apps/frontend/components/: DiffViewer.tsx  GitDiffList.tsx  GitDiffViewer.tsx  ResumeCommandButton.tsx  SessionDetailModeToggle.tsx  SessionListView.tsx  TaskTree.tsx  TmuxTerminal.tsx  WorktreeDetails.tsx  WorktreeGitSection.tsx  WorktreeList.tsx  WorktreeProcesses.tsx  WorktreeSessions.tsx
apps/frontend/components/blocks/diff-viewer/: diff-viewer.tsx
apps/frontend/components/blur-fade/: blur-fade.tsx  fade.module.css
apps/frontend/components/layout/: MainLayout.tsx
apps/frontend/components/ui/: button.tsx  card.tsx  collapsible-card.tsx  copy-button.tsx  scroll-area.tsx  tooltip.tsx
apps/frontend/components/ui/diff/: index.tsx  (+1 more)
apps/frontend/hooks/: useAgentDevSocket.ts  useDeleteWorktree.ts  useDiscoveredWorktrees.ts  useLaunchWorktreeCommand.ts  useMergeWorktree.ts  useSessionDetailMode.ts  useSessionDetails.ts  useSessions.ts  useTasks.ts  useWorktreeProcesses.ts  useWorktrees.ts
apps/frontend/lib/: api.ts  apiClient.ts  clamp.ts  diffPreferences.ts  providers.ts  queryClient.ts  queryKeys.ts  session-utils.ts
apps/frontend/types/: index.ts
docs/: desktop-shell-notes.md  diff-viewer-rebuild-plan.md  react-query-migration-plan.md  rfc-session-resume-mvp.md  rust-dependency-upgrade-plan.md
scripts/: dev-ui.sh
src/: claude.rs  claude_status.rs  completions.rs  config.rs  discovery.rs  git.rs  input.rs  lib.rs  main.rs  process_registry.rs  state.rs  tmux.rs  utils.rs
src/commands/: add.rs  clean.rs  complete.rs  create.rs  dashboard.rs  delete.rs  delete_task.rs  dir.rs  discovery.rs  exec.rs  list.rs  merge.rs  mod.rs  open.rs  rename.rs  sessions.rs  start.rs  ui.rs
src/sessions/: claude_cli.rs  codex.rs  kimi.rs  mod.rs
src/sessions/claude_cli/: tests.rs
src/sessions/codex/: tests.rs
src/sessions/kimi/: tests.rs
src/web/: api.rs  frontend.rs  mod.rs
tests/: integration.rs  pipe_input.rs  test_dashboard.rs
tests/fixtures/sessions/claude/: c3bcc6a0-de15-480b-94ec-f0f0521abf18.jsonl
tests/fixtures/sessions/codex/: rollout-2025-10-17T20-38-29-0199f22d-c547-7eb3-99cd-bfef8fb5430c.jsonl  user_message_duplicate.jsonl
tests/fixtures/sessions/kimi/: 5a769f2b-7e5f-4bec-bf2f-6d007cfd43bf.jsonl
tests/fixtures/snapshots/claude/: real_session_parallel_tools.json
tests/fixtures/snapshots/codex/: real_session_tool_events.json
tests/fixtures/snapshots/kimi/: real_session.json
tests/snapshots/: integration__add_existing_worktree-2.snap  integration__add_existing_worktree.snap  integration__clean_invalid_worktrees.snap  integration__create_on_wrong_branch.snap  integration__create_with_name-2.snap  integration__create_with_name.snap  integration__create_with_slash_in_branch_name.snap  integration__create_with_submodules.snap  integration__create_without_submodules.snap  integration__delete_clean_worktree.snap  integration__list_empty.snap  integration__list_with_worktrees.snap
(+6 files in other folders)
