[package]
name = "xlaude"
version = "0.2.0"
edition = "2024"
description = "A CLI tool for managing Claude instances with git worktree"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
colored = "3.0.0"
dialoguer = "0.11.0"
directories = "5.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8.5"
bip39 = "2.1.0"
anyhow = "1.0.98"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json", "redactions"] }
tempfile = "3.14.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
regex = "1.11.1"
