[package]
name = "agentdev"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for managing Agent instances with git worktree"
license = "Apache-2.0"

[lib]
name = "agentdev"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.42", features = ["derive", "env"] }
clap_complete = "4.5.42"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.8"
colored = "3.0.0"
dialoguer = "0.11.0"
directories = "6"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8.5"
bip39 = "2.1.0"
anyhow = "1.0.98"
axum = { version = "0.7", features = ["ws"] }
ratatui = "0.28"
crossterm = "0.28"
atty = "0.2"
shell-words = "1.1.0"
unicode-width = "0.1"
ctrlc = "3.4"
walkdir = "2.5"
ignore = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["make", "util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "normalize-path"] }
rayon = "1.10"
rust-embed = { version = "8.0", features = ["axum", "interpolate-folder-path"] }
mime_guess = "2.0"
md5 = "0.7"
which = "8.0.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json", "redactions"] }
tempfile = "3.14.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
regex = "1.11.1"
expect-test = "1.4"

[build-dependencies]
anyhow = "1.0.98"
cargo-emit = "0.2"
dircpy = "0.3"
