[package]
name = "agentdev-ui"
version = "0.1.0"
edition = "2021"
description = "Web UI server for agentdev"

[[bin]]
name = "agentdev-ui"
path = "src/main.rs"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"

# Static file embedding
rust-embed = { version = "8.0", features = ["axum"] }
mime_guess = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Additional dependencies needed for agentdev integration
shell-words = "1.0"
toml = "0.8"

# Parent crate dependencies (for shared functionality)
agentdev = { path = "../../" }
